fix(campaigns-wizard): layout issues

--- a/assets/wizards/popups/components/popup-popover/style.scss
+++ b/assets/wizards/popups/components/popup-popover/style.scss
@@ -1,4 +1,6 @@
 .newspack-popup-action-card-popover-control {
-	position: absolute;
-	right: 0;
+	margin-left: auto !important;
+	margin-right: 0 !important;
+	display: inline-block;
+	flex: 0 0 auto;
 }
